@@ -140,6 +140,30 @@
         <ul class="content-points">
             <li>
                 <div class="research">
+                    <span class="title"><span class="publication-title">
+                        Computer simulations to classrooms: tools for change
+                    </span></span>,
+
+                    <span class="authors">Podolefsky, N. S., Perkins, K.K. and Adams, W. K.</span>,
+                    <span class="publication_name">2009 Physics Education Research - Conference Proceedings. AIP Press</span>,
+                    <span class="publication_lookup"> in review </span>,
+                    <span class="publication_date">2010</span>.
+                </div>
+            </li>
+            <li>
+                <div class="research">
+                    <span class="title"><span class="publication-title">
+                        Student Choices when Learning with Computer Simulations
+                    </span></span>,
+
+                    <span class="authors">Podolefsky, N. S., Perkins, K.K. and Adams, W. K.</span>,
+                    <span class="publication_name">2009 Physics Education Research - Conference Proceedings. AIP Press</span>,
+                    <span class="publication_lookup"> in review </span>,
+                    <span class="publication_date">2010</span>.
+                </div>
+            </li>
+            <li>
+                <div class="research">
                     <span class="title"><a
                             href="http://phet.colorado.edu/web-pages/publications/PERC_Interview_Guidance.pdf">
                         What Levels of Guidance Promote Engaged Exploration with Interactive Simulations?
@@ -205,42 +229,6 @@
             </li>
             <li>
                 <div class="research">
-                    <span class="title"><a href="/publications/Paulson_etal_2009/Paulson_etal_2009.pdf">
-                        How does the type of guidance student use of an interactive simulation?
-                    </a></span>,
-
-                    <span class="authors">A. Paulson, K. Perkins, and W. Adams</span>,
-                    <span class="publication_name">Phys. Rev.ST Phys. Educ. Res.</span>,
-                    <span class="publication_lookup"> submitted </span>,
-                    <span class="publication_date">2009</span>.
-                </div>
-            </li>
-            <li>
-                <div class="research">
-                    <span class="title"><span class="publication-title">
-                        Computer simulations to classrooms: tools for change
-                    </span></span>,
-
-                    <span class="authors">Podolefsky, N. S., Perkins, K.K. and Adams, W. K.</span>,
-                    <span class="publication_name">2009 Physics Education Research - Conference Proceedings. AIP Press</span>,
-                    <span class="publication_lookup"> in review </span>,
-                    <span class="publication_date">2010</span>.
-                </div>
-            </li>
-            <li>
-                <div class="research">
-                    <span class="title"><span class="publication-title">
-                        Student Choices when Learning with Computer Simulations
-                    </span></span>,
-
-                    <span class="authors">Podolefsky, N. S., Perkins, K.K. and Adams, W. K.</span>,
-                    <span class="publication_name">2009 Physics Education Research - Conference Proceedings. AIP Press</span>,
-                    <span class="publication_lookup"> in review </span>,
-                    <span class="publication_date">2010</span>.
-                </div>
-            </li>
-            <li>
-                <div class="research">
                     <span class="title"><a href="/publications/Simulation%20Design%20AAPT%2004.pdf">
                         Research-Based Design Features of Web-based Simulations
                     </a></span>,
@@ -295,13 +283,14 @@
             </li>
             <li>
                 <div class="research">
-                    <span class="title"><a href="http://www.colorado.edu/physics/EducationIssues/papers/Finkelstein_PERC1.pdf">
-                        Can Computer Simulations Replace Real Equipment in Undergraduate Laboratories?
+                    <span class="title"><a
+                            href="http://www.colorado.edu/physics/EducationIssues/papers/perc06_keller.pdf">
+                        Assessing the Effectiveness of a Computer Simulation in Introductory Undergraduate Environments
                     </a></span>,
 
-                    <span class="authors">N. D. Finkelstein, K. K. Perkins, W. Adams, P. Kohl, and N. Podolefsky</span>,
+                    <span class="authors">C. J. Keller, N. D. Finkelstein, K. K. Perkins, and S. J. Pollock</span>,
                     <span class="publication_name">PERC Proceedings</span>,
-                    <span class="publication_date">2004</span>.
+                    <span class="publication_date">2006</span>.
                 </div>
             </li>
             <li>
@@ -320,7 +309,8 @@
             </li>
             <li>
                 <div class="research">
-                    <span class="title"><a href="http://www.colorado.edu/physics/EducationIssues/papers/perc2005_keller.pdf">
+                    <span class="title"><a
+                            href="http://www.colorado.edu/physics/EducationIssues/papers/perc2005_keller.pdf">
                         Assessing the effectiveness of a computer simulation in conjunction with Tutorials in
                         Introductory
                         Physics in undergraduate physics recitations
@@ -329,17 +319,6 @@
                     <span class="authors">C. J. Keller, N.D. Finkelstein, K. K. Perkins, and S. J. Pollock</span>,
                     <span class="publication_name">PERC Proceedings</span>,
                     <span class="publication_date">2005</span>.
-                </div>
-            </li>
-            <li>
-                <div class="research">
-                    <span class="title"><a href="http://www.colorado.edu/physics/EducationIssues/papers/perc06_keller.pdf">
-                        Assessing the Effectiveness of a Computer Simulation in Introductory Undergraduate Environments
-                    </a></span>,
-
-                    <span class="authors">C. J. Keller, N. D. Finkelstein, K. K. Perkins, and S. J. Pollock</span>,
-                    <span class="publication_name">PERC Proceedings</span>,
-                    <span class="publication_date">2006</span>.
                 </div>
             </li>
             <li>
@@ -357,14 +336,14 @@
             </li>
             <li>
                 <div class="research">
-                    <span class="title"><a href="/publications/Teaching_physics_using_PhET_TPT.pdf">
-                        Teaching Physics using PhET Simulations
+                    <span class="title"><a
+                            href="http://www.colorado.edu/physics/EducationIssues/papers/Finkelstein_PERC1.pdf">
+                        Can Computer Simulations Replace Real Equipment in Undergraduate Laboratories?
                     </a></span>,
 
-                    <span class="authors">C. Wieman, W. Adams, P. Loeblein, and K. Perkins</span>,
-                    <span class="publication_name">The Physics Teacher</span>,
-                    <span class="publication_lookup"> in press </span>,
-                    <span class="publication_date">2010</span>.
+                    <span class="authors">N. D. Finkelstein, K. K. Perkins, W. Adams, P. Kohl, and N. Podolefsky</span>,
+                    <span class="publication_name">PERC Proceedings</span>,
+                    <span class="publication_date">2004</span>.
                 </div>
             </li>
         </ul>
@@ -376,7 +355,8 @@
             <li>
                 <div class="research">
                     <span class="title"><a href="/publications/translating-phet-sims-adams-2010.pdf">
-                        Making Science Simulations and Websites Easily Translatable and Available Worldwide: Challenges and Solutions
+                        Making Science Simulations and Websites Easily Translatable and Available Worldwide: Challenges
+                        and Solutions
                     </a></span>,
 
                     <span class="authors">
@@ -401,13 +381,13 @@
             </li>
             <li>
                 <div class="research">
-                    <span class="title"><a href="/publications/MPTL_2009_PhET_final.pdf">
-                        Student Engagement and Learning with PhET Interactuve Simulations
+                    <span class="title"><a href="/publications/MPTL_2010_PhET_final.pdf">
+                        Student Engagement and Learning with PhET Interactive Simulations
                     </a></span>,
 
                     <span class="authors">W. K. Adams</span>,
                     <span class="publication_name">Multimedia in Physics Teaching and Learning Proceedings</span>,
-                    <span class="publication_date">2009</span>.
+                    <span class="publication_date">2010</span>.
                 </div>
             </li>
             <li>
@@ -452,7 +432,8 @@
             </li>
             <li>
                 <div class="research">
-                    <span class="title"><a href="http://www.colorado.edu/AcademicAffairs/ScienceEducationProject/documents/Wieman_2007_Oersted_Medal_Lecture.pdf">
+                    <span class="title"><a
+                            href="http://www.colorado.edu/AcademicAffairs/ScienceEducationProject/documents/Wieman_2007_Oersted_Medal_Lecture.pdf">
                         Oersted Medal Lecture 2007: Interactive simulations for teaching physics: What works, what
                         doesn't, and
                         why
@@ -489,45 +470,6 @@
                     <span class="publication_name">Nature Physics</span>,
                     <span class="publication_lookup"> p. 290-292 </span>,
                     <span class="publication_date">May 2006</span>.
-                </div>
-            </li>
-
-
-            <li>
-                <div class="research">
-                    <span class="title"><a href="/publications/MPTL_2010_PhET_final.pdf">
-                        Student Engagement and Learning with PhET Interactive Simulations
-                    </a></span>,
-
-                    <span class="authors">W. K. Adams</span>,
-                    <span class="publication_name">Multimedia in Physics Teaching and Learning Proceedings</span>,
-                    <span class="publication_date">2010</span>.
-                </div>
-            </li>
-            <li>
-                <div class="research">
-                    <span class="title"><a href="/publications/MPTL_translating_sims_final.pdf">
-                        Making On-Line Science Course Materials Easily Translatable and Accessible WorldWide: Challenges
-                        and
-                        Solutions
-                    </a></span>,
-
-                    <span class="authors">W. K. Adams, H. Alhadlaq, C. V. Malley, K. K. Perkins, J. B. Olson, F Alshaya, S. Alabdulkareem, C. E. Wieman</span>,
-                    <span class="publication_name">Multimedia in Physics Teaching and Learning Proceedings</span>,
-                    <span class="publication_date">2009</span>.
-                </div>
-
-            </li>
-            <li>
-                <div class="research">
-                    <span class="title"><a href="/publications/Technical_concerns.pdf">
-                        Making On-Line Science Course Materials Easily Translatable and Accessible Worldwide: Technical
-                        Concerns
-                    </a></span>,
-
-                    <span class="authors">C. V. Malley, J. B. Olson</span>,
-                    <span class="publication_name">Multimedia in Physics Teaching and Learning Proceedings</span>,
-                    <span class="publication_date">2009</span>.
                 </div>
             </li>
             <li>
@@ -624,7 +566,8 @@
             </li>
             <li>
                 <div class="research">
-                    <span class="title"><a href="http://www.colorado.edu/physics/EducationIssues/papers/McKaganPERCproceedings2006.pdf">
+                    <span class="title"><a
+                            href="http://www.colorado.edu/physics/EducationIssues/papers/McKaganPERCproceedings2006.pdf">
                         Reforming a large lecture modern physics course for engineering majors using a PER-based design
                     </a></span>,
 
@@ -650,7 +593,8 @@
             </li>
             <li>
                 <div class="research">
-                    <span class="title"><a href="http://www.colorado.edu/physics/EducationIssues/papers/McKaganPERCproceedings2005.pdf">
+                    <span class="title"><a
+                            href="http://www.colorado.edu/physics/EducationIssues/papers/McKaganPERCproceedings2005.pdf">
                         Exploring Student Understanding of Energy through the Quantum Mechanics Conceptual Survey
                     </a></span>,
 
